@@ -1,5 +1,11 @@
 Changes with Apache 1.3b6
 
+  *) Fixed the DBM RewriteMap support for mod_rewrite: First the support now
+     is automatically disabled under configure time when the dbm_xxx functions
+     are not available. Second, two heavy source code errors in the DBM
+     support code were fixed.  This makes DBM RewriteMap's useable again after
+     a long time of brokeness. [Ralf S. Engelschall]
+
   *) Now all configuration files support Unix-style line-continuation via 
      the trailing backslash ("\") character. This enables us to write down
      complex or just very long directives in a more readable way.  The
